--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,175 @@ body {
 
   /* BASE STYLES */
 
+  /* #region HEADER */
+
+    .page-header {
+        padding: 20px 0;
+        border-bottom: 1px solid rgba(12, 12, 12, 0.1);
+        position: sticky;
+        top: 0;
+        background-color: #fbfbfb;
+        /* Можете змінити колір фону */
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        /* Додавання тіні */
+        z-index: 990;
+        /* Забезпечує, що header буде над іншими елементами */
+        transition: transform 0.3s ease;
+      }
+      
+      .page-header.hidden {
+        transform: translateY(-100%); /* Скрытие хедера */
+      }
+ 
+    .header-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .header-logo {
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: -0.02em;
+    }
+
+    .nav-list,
+    .header-social-list {
+        display: none;
+    }
+
+    .nav-btn-mobile {
+        background-color: transparent;
+        border: none;
+        stroke: #2f2f37;
+        padding: 0;
+        line-height: 0;
+    }
+
+    .burger-icon {
+        stroke: #0c0c0c;
+    }
+
+    @media screen and (min-width: 768px) {
+        .page-header {
+            padding: 26px 0;
+        }
+
+        .header-logo {
+            font-size: 20px;
+        }
+
+        .nav-btn-mobile {
+            width: 40px;
+            height: 40px;
+        }
+    }
+
+    @media screen and (min-width: 1280px) {
+        .nav-btn-mobile {
+            display: none;
+        }
+
+        .page-header {
+            padding: 0;
+        }
+        
+        .header-nav-list {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+        }
+
+        .header-logo {
+            padding: 32px 0;
+            margin-right: 203px;
+        }
+
+        .nav-list {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 40px;
+        }
+
+        .nav-list-item {
+        }
+
+        .nav-item-link {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 1.29;
+            text-align: center;
+            padding-top: 30px;
+            padding-bottom: 40px;
+            position: relative;
+            display: block;
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .nav-item-link::after {
+            content: '';
+            position: absolute;
+            left: 50%;
+            bottom: 31px;
+            /* відступ від тексту посилання */
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background-color: #3350e9;
+            /* колір кружечка */
+            transition: all 0.3s ease;
+          }
+
+        .nav-item-link:hover::after,
+        .nav-item-link.scroll-a::after {
+            width: 8px;
+            /* розмір кружечка */
+            height: 8px;
+            /* розмір кружечка */
+            left: 50%;
+            transform: translateX(-50%);
+            }
+
+        .nav-item-link:hover,
+        .nav-item-link:focus {
+            fill: #3350e9;
+            border-color: #3350e9;
+        }
+
+        /* header social list */
+
+        .header-social-list {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            gap: 10px;
+        }
+
+        .header-social-item {
+            border: 1px solid rgba(12, 12, 12, 0.1);
+            border-radius: 10px;
+            padding: 8px;
+            width: 36px;
+            height: 36px;
+        }
+
+
+        .header-social-icon {
+            fill: #0c0c0c;
+            opacity: 0.8;
+            transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .header-social-icon:hover,
+        .header-social-icon:focus {
+            opacity: 1;
+        }
+        
+    }
+
+  /* #endregion */
+
   /* #region REVIEWS */
 
   .reviews-container {
